--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "build-css": "tailwindcss build styles/index.css -o dist/style.css"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -23,6 +24,6 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.2.4"
   }
 }
