--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 		"vscode": {
 			"extensions": [
 				"GitHub.copilot",
-				"bradlc.vscode-tailwindcss"
+				"bradlc.vscode-tailwindcss",
+				"shd101wyy.markdown-preview-enhanced"
 			]
 		}
 	}
