--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
-    "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
